[package]
name = "backend"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.78"
async-trait = "0.1.77"
axum = "0.7.3"
expo_push_notification_client = "0.3.1"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
mockall = "0.12.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.111"
tower = { version = "0.4.13", features = ["util"] }
